<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".demo.HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:orientation="vertical"
            tools:showIn="@layout/activity_home">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                card_view:title="STT and TTS Demo"
                card_view:titleTextColor="@color/purple_700"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/purple_200"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:padding="10dp"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_200"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/sttHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/speech_to_text"
                        android:textColor="@color/white"
                        android:textSize="21sp"
                        android:textStyle="bold" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/speechToText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@null"
                        android:layout_centerVertical="true"
                        android:layout_margin="@dimen/fab_margin"
                        android:src="@drawable/vector_hear" />


                    <TextView
                        android:id="@+id/sttLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/sttHeading"
                        android:layout_marginTop="10dp"
                        android:layout_toStartOf="@+id/speechToText"
                        android:text="@string/speech_to_text_output"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <ScrollView
                        android:id="@+id/wrap"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/sttLabel"
                        android:layout_marginTop="10dp"
                        android:layout_toStartOf="@+id/speechToText"
                        android:background="@color/purple_200">

                        <TextView
                            android:id="@+id/sttOutput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/speech_to_text_output_will_be_shown_here"
                            android:textColor="@color/purple_700"
                            android:textSize="20sp" />
                    </ScrollView>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:padding="10dp"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_200"
                    android:padding="10dp">

                    <TextView
                        android:layout_toStartOf="@+id/textToSpeech"
                        android:id="@+id/ttsHeading"
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="start"
                        android:textStyle="bold"
                        android:layout_alignParentTop="true"
                        android:text="@string/text_to_speech"
                        android:textColor="@color/white"
                        android:textSize="21sp"
                       />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/textToSpeech"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="@dimen/fab_margin"
                        android:src="@drawable/vector_speak" />


                    <TextView
                        android:id="@+id/ttsLabel"
                        android:layout_below="@+id/ttsHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@+id/textToSpeech"
                        android:focusableInTouchMode="true"
                        android:backgroundTint="@color/purple_700"
                        android:text="@string/text_to_speech_input"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                         />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/ttsInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ttsLabel"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:gravity="start"
                        android:focusable="true"
                        app:backgroundTint="@color/purple_700"
                        android:hint="@string/enter_text_and_click_on_speak_button"
                        android:textColorHint="@color/white"
                        android:textColor="@color/purple_700"
                        android:textSize="20sp"
                        />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:padding="10dp"
                card_view:cardCornerRadius="4dp">
                <LinearLayout
                    android:padding="10dp"
                    android:background="@color/purple_200"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/error_heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="start"
                        android:text="@string/error_handling"
                        android:textAllCaps="true"
                        android:textColor="@color/purple_700"
                        android:textSize="21sp"
                        android:textStyle="bold" />

                    <TextView
                        android:textColor="@color/white"
                        android:id="@+id/error_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="start"
                        android:text="@string/error_message"
                        android:textSize="13sp"
                      />

                    <TextView
                        android:id="@+id/erroConsole"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="start"
                        android:text="@string/error_will_be_shown_here"
                        android:textColor="#F00"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
